otp color change

--- a/templates/verify2.html
+++ b/templates/verify2.html
@@ -106,7 +106,7 @@
             {% endif %}
         {% endwith %}
         <form action="/validate" method="post">
-            <h1>One time password has been sent to the mail id.<br>Please check...</h1>
+            <h1 style="color: #0E4AA1;">One time password has been sent to the mail id.<br>Please check...</h1>
             <p>by <b>Mathesh</b></p>
             Enter OTP: <input type="text" name="otp">
             <input type="submit" value="Submit">
